--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nanostores": "^0.9.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.46.1",
     "tailwindcss": "^3.0.24"
   }
 }
